[package]
name = "rust-terrain-gen"
version = "0.0.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.6.0"
image = "0.23.0"
ndarray = { version = "0.13.1", features = ["rayon"] }
rayon = "1.3.0"
