[package]
name = "rust-terrain-gen"
version = "0.0.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
noise = "0.6.0"
num = "0.3.0"
ndarray = { version = "0.13.1", features = ["rayon"] }
rayon = "1.3.0"
rand = "0.7.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
indicatif = "0.15.0"
clap = "3.0.0-beta.1"
image = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.67"
console_error_panic_hook = "0.1.0"
rand = { version = "0.7.0", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.0"
features = [
    "console",
    "ImageData",
    "Document",
    "Element",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]
